# Biology-Lab_Project

./: README.md
FTServo_Python/hls/: ofscal.py  ping.py  read.py  read_write.py  reg_write.py  reset.py  sync_read.py  sync_write.py  wheel.py  write.py  write_one_motor.py  write_two_motor.py
agx_driver_api/: .gitignore  MANIFEST.in  README.md  rm_tmp.sh  setup.py
agx_driver_api/gripper_sdk/: __init__.py  pyproject.toml  version.py
agx_driver_api/gripper_sdk/api/: __init__.py  driver_api.py
agx_driver_api/gripper_sdk/demo/: get_motor_info.py  gripper_ctrl_demo.py  set_current_limit.py  set_zero.py
agx_driver_api/gripper_sdk/hardware_port/: __init__.py  can_encapsulation.py
agx_driver_api/gripper_sdk/motor_msgs/msg_v2/: __init__.py  can_id.py  id_type_map.py  messages.py  msg_type.py
agx_driver_api/gripper_sdk/motor_msgs/msg_v2/feedback/: __init__.py  feedback_high_spd.py  feedback_low_spd.py  feedback_resp_set_zero.py
agx_driver_api/gripper_sdk/motor_msgs/msg_v2/transmit/: __init__.py  mit_ctrl.py
agx_driver_api/gripper_sdk/protocol/: __init__.py  protocol_base.py  protocol_interface.py
agx_driver_api/gripper_sdk/utils/: __init__.py  fps.py  logger_mag.py
tcp_pylibrm-0.0.8/: README.md  demo.py  sdk_test.py  setup.py
tcp_pylibrm-0.0.8/pylibrm/: constant.py  example.py
